--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 	<head>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<link type="text/css" rel="stylesheet" href="index.css"/>
 		<title></title>
 	</head>
 	<body>
