--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <HTML>
 	<head>
 		<link type="text/css" rel="stylesheet" href="index.css"/>
-		<title></title>
+		<title>Star Map</title>
 	</head>
 	<body>
         <div id="header">
-            <p id="name">J_ss</p>
+            <p id="name">SWPlanetsMap</p>
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">an email</p>
         </div>
-        <div class="left"></div>
+        <div class="left">
+        	<h2>
+        		<p>B_n</p>
+        	</h2>
+        </div>
         <div class="right">
-            <h4>Education</h4>
-            <p><a href="http://www.codecademy.com/">Codecademy</a>. Grade school.</p>
+       		<h4><a href="#">Map</a>.</h4>
+            <p>A derivative project od Exoplanet Catalogue, and it's companion app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets,and other significant (and insignificant) artifacts.</p>
             <h4>Objectives</h4>
-            <p>To be able to use code for many things.</p>
-            <h4>Experience</h4>
-            <p>N/A</h4>
-            <h4>Skills</h4>
-            <p>Limited skills in:</p>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-            </ul>
+            	<li>Cataloging of all (known) systems. This includes:</li>
+            	<ul>
+            		<li>Systems</li>
+            		<li>Planets</li>
+            		<li>Cities</li>
+            		<li>Astronomical Phenomenon</li>
+            	</ul>
+            	<li>BUilding a webapp to visualise, in simulated 3-d, the data.</li>
+            	</ul>
         </div>
         <div id="footer">
-            <p>Some Street, Some City, Some State, Some Country | Tel: (###) ###-####
+            <p>500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)
         </div>
 	</body>
 </HTML>
