--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">an email</p>
         </div>
         <div class="left">
-        	<h2>
+        	<h1>
         		<p>B_n</p>
-        	</h2>
+        	</h1>
         </div>
         <div class="right">
        		<h4><a href="#">Map</a>.</h4>
-            <p>A derivative project od Exoplanet Catalogue, and it's companion app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets,and other significant (and insignificant) artifacts.</p>
+            <p>A derivative/distant-cousin project of Exoplanet Catalogue, and it's companion app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
             <h4>Objectives</h4>
             <ul>
             	<li>Cataloging of all (known) systems. This includes:</li>
             	<ul>
             		<li>Systems</li>
+            		<ul>
             		<li>Planets</li>
             		<li>Cities</li>
+            		</ul>
             		<li>Astronomical Phenomenon</li>
             	</ul>
-            	<li>BUilding a webapp to visualise, in simulated 3-d, the data.</li>
+            	<li>Building a webapp to visualise, in simulated 3-d, the data.</li>
             	</ul>
         </div>
         <div id="footer">
