Updated left div, allowed favicon.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<HTML>
+<!doctype html>
+<html lang="en">
+<!-- <link rel="shortcut icon" href="insert .ico favicon here" /> -->
+<!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"> 
+	This will set the view size based on client screen, etc.  -->
 	<head>
 		<link type="text/css" rel="stylesheet" href="index.css"/>
 		<title>Star Map</title>
