--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
         <div id="header">
             <p id="name">SWPlanetsMap</p>
-            <a href="mailto:songyuzhe.long@gmail.com"><p id="email">an email</p>
+            <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</p>
         </div>
         <div class="left">
         	<h1>
