--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="left">
         	<h1>
-        		<p>B_n</p>
+        		<p>Something other then B_n</p>
         	</h1>
         </div>
         <div class="right">
