--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- <link rel="shortcut icon" href="insert .ico favicon here" /> -->
 <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"> 
-	This will set the view size based on client screen, etc.  -->
+	This should set the view size based on client screen, etc.  -->
 	<head>
 		<link type="text/css" rel="stylesheet" href="index.css"/>
 		<title>Star Map</title>
@@ -15,12 +15,12 @@
         </div>
         <div class="left">
         	<h1>
-        		<p>Something other then B_n</p>
+        		<p id="titleLeft"></p>
         	</h1>
         </div>
         <div class="right">
-       		<h4><a href="#">Map</a>.</h4>
-            <p>A derivative/distant-cousin project of Exoplanet Catalogue, and it's companion app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
+       		<h4>Welcome</h4>
+            <p>This is a derivative/distant-cousin project of Exoplanet Catalogue — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
             <h4>Objectives</h4>
             <ul>
             	<li>Cataloging of all (known) systems. This includes:</li>
@@ -34,6 +34,9 @@
             	</ul>
             	<li>Building a webapp to visualise, in simulated 3-d, the data.</li>
             	</ul>
+            	<p id="mainBody">Early focus is on compiling ar library of system data(: positions, orbits, mass(?), tep(?), transit time, radius, et cetera) to be used in the visual map.</p>
+            	<p>The map itself will be a simulated three-dimensional projection of the galaxy. It may be best to use HTML5 to render the data.</p>
+            	<p>For more information see <a href="FAQ">this FAQ</a></p>.
         </div>
         <div id="footer">
             <p>500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)
