--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             	</ul>
             	<li>Building a webapp to visualise, in simulated 3-d, the data.</li>
             	</ul>
-            	<p id="mainBody">Early focus is on compiling ar library of system data(: positions, orbits, mass(?), tep(?), transit time, radius, et cetera) to be used in the visual map.</p>
+            	<p id="mainBody">Early focus is on compiling a library of system data(: positions, orbits, mass(?), tep(?), transit time, radius, et cetera) to be used in the visual map.</p>
             	<p>The map itself will be a simulated three-dimensional projection of the galaxy. It may be best to use HTML5 to render the data.</p>
-            	<p>For more information see <a href="FAQ">this FAQ</a></p>.
+            	<p>For more information see <a href="about/FAQ">this FAQ</a></p>.
         </div>
         <div id="footer">
             <p>500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)
