--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             	</ul>
             	<p id="mainBody">Early focus is on compiling a library of system data(: positions, orbits, mass(?), tep(?), transit time, radius, et cetera) to be used in the visual map.</p>
             	<p>The map itself will be a simulated three-dimensional projection of the galaxy. It may be best to use HTML5 to render the data.</p>
-            	<p>For more information see <a href="https://raw.githubusercontent.com/benisjammin/starwars/gh-pages/README.md">this page</a></p>.
+            	<p>For more information see <a href="https://raw.githubusercontent.com/benisjammin/starwars/gh-pages/README.md">this page</a>.</p>
         </div>
         <div id="footer">
             <p>500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)
