--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<!-- <link rel="shortcut icon" href="insert .ico favicon here" /> -->
+<link rel="shortcut icon" href="http://i.imgur.com/PErixoI.png?1" />
 <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"> 
 	This should set the view size based on client screen, etc.  -->
