Changed CSS kink.
Testing CSS from tokien site.

--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"> 
 	This should set the view size based on client screen, etc.  -->
 	<head>
-		<link type="text/css" rel="stylesheet" href="index.css"/>
+		<link type="text/css" rel="stylesheet" href="basestyle.css"/>
 		<title>FAQ</title>
 	</head>
 	<body>
