--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
         <div id="header">
-            <p id="name">SWPlanetsMap</p>
+            <p id="name">StarWarsExoplanetProject</p>
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</a></p>
         </div>
         <div class="left">
@@ -25,6 +25,7 @@
         <div class="right">
        		<h4>Welcome</h4>
             <p>This is a derivative/distant-cousin project of Exoplanet Catalogue — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
+            <p>This is a library of all systems and systems data, both canon and legends, in the Star Wars universe. </p>
             <h4>Objectives</h4>
             <ul>
             	<li>Cataloging of all (known) systems. This includes:</li>
