--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <link rel="shortcut icon" href="http://i.imgur.com/PErixoI.png?1" />
 =======
 <link rel="favicon" href="http://i.imgur.com/PErixoI.png" />
->>>>>>> origin/gh-pages
 <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"> 
 	This should set the view size based on client screen, etc.  -->
 	<head>
 		<link type="text/css" rel="stylesheet" href="index.css"/>
-		<title>Star Map</title>
+		<title>Star Wars (Exo)planet Project</title>
 	</head>
 	<body>
         <div id="header">
-            <p id="name">StarWarsExoplanetProject</p>
+            <p id="name">SWEP</p>
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</a></p>
         </div>
         <div class="left">
