Cleaned up code.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             	<p>For more information see <a href="https://raw.githubusercontent.com/benisjammin/starwars/gh-pages/README.md">this page</a>.</p>
         </div>
         <div id="footer">
-            <p>500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)
+            <p>500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)</p>
         </div>
 	</body>
-</HTML>
+</html>
