--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <p id="name">SWEP</p>
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</a></p>
         </div>
-        <div class="left">
+      <!--  <div class="left">
         	<h1>
         		<p id="titleLeft"></p>
         	</h1>
-        </div>
+        </div> -->
         <div class="right">
        		<h4>Welcome</h4>
             <p>This is a derivative/distant-cousin project of Exoplanet Catalogue — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
