Attempting to fix div left.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
             <p id="name">SWEP</p>
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</a></p>
         </div>
-      <!--  <div class="left">
+        <div class="left">
         	<h1>
-        		<p id="titleLeft"></p>
+        		<p id="titleLeft">
+        		Nothing really exists here yet, but anyway.
+        		</p>
+        		<ul>
+        			<li>Home</li>
+        			<li>Forums</li>
+        			<li>Map</li>
+        			<li>Library</li>
+        			<li><a href="https://github.com/benisjammin" title="GitHub">Projects</a></li>
+        		</ul>
         	</h1>
-        </div> -->
+        </div>
         <div class="right">
        		<h4>Welcome</h4>
             <p>This is a derivative/distant-cousin project of Exoplanet Catalogue — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
