--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</a></p>
         </div>
         <div class="left">
-        	<h1>
-        		<p id="titleLeft">
+        	<p id="titleLeft">
         		Nothing really exists here yet, but anyway.
-        		</p>
-        		<ul>
-        			<li>Home</li>
+        	</p>
+        	<ul id="titleLeft">
+        		<li>Home</li>
         			<li>Forums</li>
         			<li>Map</li>
         			<li>Library</li>
         			<li><a href="https://github.com/benisjammin" title="GitHub">Projects</a></li>
-        		</ul>
-        	</h1>
+        	</ul>
         </div>
         <div class="right">
        		<h4>Welcome</h4>
