Added "in progress" tags, and temporary hrefs.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="left">
         	<p id="titleLeft">
-        		Nothing really exists here yet, but anyway.
+        		Nothing really exists here, yet, but anyway.
         	</p>
         	<ul id="titleLeft">
-        		<li>Home</li>
-        			<li>Forums</li>
-        			<li>Map</li>
-        			<li>Library</li>
-        			<li><a href="https://github.com/benisjammin" title="GitHub">Projects</a></li>
+        		<li><a title="SWEP Home" href="starwars.seulementmoi.me">Home</a></li>
+        		<li><a title="Nothing here, yet.">Forums</a></li>
+        		<li><a title="Nothing here, yet.">Map</a></li>
+        		<li><a title="Nothing here, yet.">Library</a></li>
+        		<li><a href="https://github.com/benisjammin" title="GitHub">Projects</a></li>
         	</ul>
         </div>
         <div class="right">
