--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         		Nothing really exists here, yet, but anyway.
         	</p>
         	<ul id="titleLeft">
-        		<li><a title="SWEP Home" href="starwars.seulementmoi.me">Home</a></li>
+        		<li><a title="SWEP Home" href="http://starwars.seulementmoi.me">Home</a></li>
         		<li><a title="Nothing here, yet.">Forums</a></li>
         		<li><a title="Nothing here, yet.">Map</a></li>
         		<li><a title="Nothing here, yet.">Library</a></li>
