Credit where it's due.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="right">
        		<h4>Welcome</h4>
-            <p>This is a derivative/distant-cousin project of Exoplanet Catalogue — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
+            <p>This is a derivative/distant-cousin project of <a title="by Hanno Rein and co." href="http://exoplanetapp.com">Exoplanet Catalogue</a> — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
             <p>This is a library of all systems and systems data, both canon and legends, in the Star Wars universe. </p>
             <h4>Objectives</h4>
             <ul>
