Added class="body" to <body>.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link type="text/css" rel="stylesheet" href="index.css"/>
 		<title>Star Wars (Exo)planet Project</title>
 	</head>
-	<body>
+	<body class="body">
         <div id="header">
             <p id="name">SWEP</p>
             <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</a></p>
