Updated to swerc generated pages
For now, at least, pages have to be gnerated with swerc, then grabbed with wget -m --convert-links. If needed, I'll work out a better method at some point.

--- a/index.html
+++ b/index.html
@@ -1,56 +1,82 @@
 <!doctype html>
-<html lang="en">
+<html>
+<head> 
+	<title>Welcome | SWEP </title>
+	<link rel="stylesheet" type="text/css" href="pub/style.css">
+	<meta charset="utf-8"> 
+</head> 
+<body>
+	<div id="header">
+		<a href="index.html">SWEP</a> <span id="headerSubtitle"></span>
+	</div>
 
-<link rel="shortcut icon" href="http://i.imgur.com/PErixoI.png?1" />
+	<div id="menu">
+		<span class="left">
+			<a href="http://starwars.seulementmoi.me">Home</a>
+			<a href="http://bbs.seulementmoi.me">Forums</a>
+			<a href="http://map.seulementmoi.me">Map</a>
+			<a href="http://lib.seulementmoi.me">Library</a>
+		</span>
+		<span class="right">
+			<a href="https://github.com/benisjammin">Projects</a>
+		</span>
+	</div>
 
-<link rel="favicon" href="http://i.imgur.com/PErixoI.png" />
-<!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"> 
-	This should set the view size based on client screen, etc.  -->
-	<head>
-		<link type="text/css" rel="stylesheet" href="index.css"/>
-		<title>Star Wars (Exo)planet Project</title>
-	</head>
-	<body class="body">
-        <div id="header">
-            <p id="name">SWEP</p>
-            <a href="mailto:songyuzhe.long@gmail.com"><p id="email">B_n</a></p>
-        </div>
-        <div class="left">
-        	<p id="titleLeft">
-        		Nothing really exists here, yet, but anyway.
-        	</p>
-        	<ul id="titleLeft">
-        		<li><a title="SWEP Home" href="http://starwars.seulementmoi.me">Home</a></li>
-        		<li><a title="Nothing here, yet.">Forums</a></li>
-        		<li><a title="Nothing here, yet.">Map</a></li>
-        		<li><a title="Nothing here, yet.">Library</a></li>
-        		<li><a href="https://github.com/benisjammin" title="GitHub">Projects</a></li>
-        	</ul>
-        </div>
-        <div class="right">
-       		<h4>Welcome</h4>
-            <p>This is a derivative/distant-cousin project of <a title="by Hanno Rein and co." href="http://exoplanetapp.com">Exoplanet Catalogue</a> — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it's star systems, planets, and other significant (and insignificant) artifacts.</p>
-            <p>This is a library of all systems and systems data, both canon and legends, in the Star Wars universe. </p>
-            <h4>Objectives</h4>
-            <ul>
-            	<li>Cataloging of all (known) systems. This includes:</li>
-            	<ul>
-            		<li>Systems</li>
-            		<ul>
-            		<li>Planets</li>
-            		<li>Cities</li>
-            		</ul>
-            		<li>Astronomical Phenomenon</li>
-            	</ul>
-            	<li>Building a webapp to visualise, in simulated 3-d, the data.</li>
-            	</ul>
-            	<p id="mainBody">Early focus is on compiling a library of system data(: positions, orbits, mass(?), tep(?), transit time, radius, et cetera) to be used in the visual map.</p>
-            	<p>The map itself will be a simulated three-dimensional projection of the galaxy. It may be best to use HTML5 to render the data.</p>
-            	<p>For more information see <a href="https://raw.githubusercontent.com/benisjammin/starwars/gh-pages/README.md">this page</a>.</p>
-        </div>
-        <div id="footer">
-            <p>500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)</p>
-        </div>
-	</body>
+	<div id="content">
+	<div id="nav">
+<ul>
+<li><a href="FAQ/index.html">FAQ/</a></li>
+</ul>
+	</div>
+
+	<div id="main">
+
+
+<h1>Welcome</h1>
+
+<p>This is a derivative/distant-cousin project of Exoplanet Catalogue — and the Exoplanet iPhone app. This is to be an accessible, usable resource for the visualisation of the Star Wars galaxy, it&rsquo;s star systems, planets, and other significant (and insignificant) artifacts.</p>
+
+<p>This is a library of all systems and systems data, both canon and legends, in the Star Wars universe.</p>
+
+<h2>Objectives</h2>
+
+<ul>
+<li>Cataloging of all (known) systems. This includes:
+
+<ul>
+<li>Systems
+
+<ul>
+<li>Planets</li>
+<li>Cities</li>
+</ul>
+</li>
+<li>Astronomical Phenomenon</li>
+</ul>
+</li>
+<li>Building a webapp to visualise, in simulated 3-d, the data.</li>
+</ul>
+
+
+<p>Early focus is on compiling a library of system data (positions, orbits, mass(?), tep(?), transit time, radius, et cetera) to be used in the visual map.</p>
+
+<p>The map itself will be a simulated three-dimensional projection of the galaxy. It may be best to use HTML5 to render the data.</p>
+
+<p>For more information see this page.</p>
+
+
+	</div>
+
+	</div>
+
+	<div id="footer">
+	<span class="left">
+	500 Republica, Senate District, Galactic City, Coruscant | XYZ: 0, 0, (0)
+	</span>
+
+	<span class="right">
+	&copy; 2015 seulementmoi.me | <a href="mailto:tobias.stockler@gmail.com">B_n</a>
+	</span>
+	</div>
+</body>
 </html>
