Fixed link to FAQ in man index.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <p>The map itself will be a simulated three-dimensional projection of the galaxy. It may be best to use HTML5 to render the data.</p>
 
-<p>For more information see this page.</p>
+<p>For more information see <a href="FAQ/index.html">this page</a>.</p>
 
 
 	</div>
