--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Welcome | SWEP </title>
 	<link rel="stylesheet" type="text/css" href="pub/style.css">
 	<meta charset="utf-8"> 
+	<link rel="shortcut icon" href="http://i.imgur.com/PErixoI.png?1" />
+	<link rel="favicon" href="http://i.imgur.com/PErixoI.png" />
 </head> 
 <body>
 	<div id="header">
