--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 	<div id="menu">
 		<span class="left">
-			<a href="http://starwars.seulementmoi.me">Home</a>
-			<a href="http://bbs.seulementmoi.me">Forums</a>
-			<a href="http://map.seulementmoi.me">Map</a>
-			<a href="http://lib.seulementmoi.me">Library</a>
+			<a href="http://starwars.seulementmoi.co.uk">Home</a>
+			<a href="http://bbs.seulementmoi.co.uk">Forums</a>
+			<a href="http://map.seulementmoi.co.uk">Map</a>
+			<a href="http://lib.seulementmoi.co.uk">Library</a>
 		</span>
 		<span class="right">
 			<a href="https://github.com/benisjammin">Projects</a>
@@ -77,7 +77,7 @@
 	</span>
 
 	<span class="right">
-	&copy; 2015 seulementmoi.me | <a href="mailto:tobias.stockler@gmail.com">B_n</a>
+	&copy; 2015 seulementmoi.co.uk | <a href="mailto:tobias.stockler@gmail.com">B_n</a>
 	</span>
 	</div>
 </body>
