--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -36,7 +36,7 @@
 
 <h2>What is SWEP?</h2>
 
-<p>SWEP is an in-progress attempt to map the Star Wars universe!</p>
+<p>SWEP is an <s>in-progress</s> <i>on hold</i> attempt to map the Star Wars universe!</p>
 
 <h2>Who are you?</h2>
 
