Prepare to change links for new directories.

--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
-<head> 
+<head>
 	<title>Frequently Questioned Answers | SWEP </title>
 	<link rel="stylesheet" type="text/css" href="../pub/style.css">
-	<meta charset="utf-8"> 
-</head> 
+	<meta charset="utf-8">
+</head>
 <body>
 	<div id="header">
 		<a href="../index.html">SWEP</a> <span id="headerSubtitle"></span>
@@ -14,8 +14,11 @@
 		<span class="left">
 			<a href="http://starwars.seulementmoi.co.uk">Home</a>
 			<a href="http://bbs.seulementmoi.co.uk">Forums</a>
+				<!-- replace with http://starwars.seulementmoi.co.uk/bbs/ -->
 			<a href="http://map.seulementmoi.co.uk">Map</a>
+				<!-- replace with http://starwars.seulementmoi.co.uk/map/ -->
 			<a href="http://lib.seulementmoi.co.uk">Library</a>
+				<!-- replace with http://starwars.seulementmoi.co.uk/lib/ -->
 		</span>
 		<span class="right">
 			<a href="https://github.com/benisjammin">Projects</a>
