Re-official hold

--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Frequently Questioned Answers | SWEP </title>
+	<title>Fairly Questionable Answers | SWEP </title>
 	<link rel="stylesheet" type="text/css" href="../pub/style.css">
 	<meta charset="utf-8">
 </head>
@@ -39,11 +39,11 @@
 
 <h2>What is SWEP?</h2>
 
-<p>SWEP is an <s>in-progress</s> <i>on hold</i> attempt to map the Star Wars universe!</p>
+<p>SWEP was attempt to realistically map the Star Wars universe, in three dimensions. Though the idea was never formally dicounted, knowledge of Java and general interest in the project were found to be lacking early on. In hopes of someday being resumed, the project lies dormant.</p>
 
 <h2>Who are you?</h2>
 
-<p>None of your business.</p>
+<p>A team of three, including : an aspiring fan, a can-do attitude and an out-of-her-depth vision(f)airy.</p>
 
 
 	</div>
